--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 Frontier Service Status
             </h1>
             <p class="text-lg text-gray-600 mt-2">Check your service status and view location</p>
+            <div class="mt-4">
+                <a href="tickets.html" class="inline-block bg-gray-100 text-gray-700 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200 transition-colors">
+                    View All Tickets
+                </a>
+            </div>
         </div>
 
         <!-- Main Content Grid -->
